fixed small gap when clicking nav

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 :root {
-  --main-color:#022F40;
+  --main-color:#042532;
   --base-color: white;
   --second-color: #38AECC;
   --accent-color: #FF6978;
@@ -22,8 +22,8 @@ img {
 :target::before {
   content: "";
   display: block;
-  height: 61px;
-  margin: -61px 0 0; 
+  height: 60px;
+  margin: -60px 0 0; 
 }
 
 #App {
@@ -92,6 +92,7 @@ img {
   font-size: 35px;
   font-weight: 600;
   padding: 13px 0;
+  /* margin-top: .3em; */
   text-align: center;
 }
 
