--- a/src/components/About.css
+++ b/src/components/About.css
@@ -18,7 +18,7 @@
   justify-content: space-around;
   align-items: center;
   background-color: var(--base-color);
-  padding: 3% 5%;
+  padding: 3% 8%;
 }
 
 .about-info {
